--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-echo # Dependencias del proyecto > requirements.txt
-echo. >> requirements.txt
-echo # Jinja2 para plantillas >> requirements.txt
-echo # pdfkit para generar PDF >> requirements.txt
+jinja2>=3.1.6
+weasyprint>=60.0
+pdfkit>=1.0.0
